force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/cgc_sync__Sync_Mobile_App_PL_Repo__c.object-meta.xml
<CustomObject>
    <description>Repository of dropdown boxes on the mobile application</description>
    <label>Mobile App Picklist Repository</label>
    <nameField>
        <displayFormat>PLR-{00000000}</displayFormat>
        <label>Mobile App Picklist Repository Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Picklist Repositories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>