force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/fields/cgc_sync__Business_Area__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Business_Area__c</fullName>
    <description>Segregation key.</description>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgc_sync__Business_Area</valueSetName>
    </valueSet>
</CustomField>