force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/fields/cgc_sync__Has_Empty_Item__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Has_Empty_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if picklist contains an empty item.</description>
    <label>Has Empty Item</label>
    <type>Checkbox</type>
</CustomField>