force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/fields/cgc_sync__Mobile_App_Domain__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Mobile_App_Domain__c</fullName>
    <description>Mapping to the domain name of the mobile runtime artifact.</description>
    <label>Mobile App Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>