force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/fields/cgc_sync__Object__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Object__c</fullName>
    <description>Refers to the entity name,</description>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>