force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/fields/cgc_sync__Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Picklist_Value__c</fullName>
    <description>Picklist value.</description>
    <label>Picklist Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>