force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Repo__c/fields/cgc_sync__Text_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Text_Language_3__c</fullName>
    <description>Display text for language 3 in this business area.</description>
    <label>Text_Language_3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>